# tailwind-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
src/tailwind_py/: cli.py  download.py  tailwind.py
tests/: conftest.py  test_download_tailwind_executable.py  test_tailwind_commands.py
